--- a/external/lsplant/lsplant/src/main/jni/CMakeLists.txt
+++ b/external/lsplant/lsplant/src/main/jni/CMakeLists.txt
@@ -12,35 +12,35 @@ add_definitions(-std=c++20)
 
 set(SOURCES lsplant.cc)
 
+set(DEX_BUILDER_BUILD_SHARED OFF CACHE INTERNAL "" FORCE)
 add_subdirectory(external/dex_builder)
 
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
+option(LSPLANT_BUILD_SHARED "If ON, lsplant will also build shared library" ON)
+
+if (LSPLANT_BUILD_SHARED)
+    message(STATUS "Building lsplant as a shared library")
+    add_library(${PROJECT_NAME} SHARED ${SOURCES})
+    target_include_directories(${PROJECT_NAME} PUBLIC include)
+    target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+    target_compile_options(${PROJECT_NAME} PRIVATE -flto)
+    target_link_options(${PROJECT_NAME} PRIVATE -flto)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E make_directory ${DEBUG_SYMBOLS_PATH}/${ANDROID_ABI}
+            COMMAND ${CMAKE_OBJCOPY} --only-keep-debug $<TARGET_FILE:${PROJECT_NAME}>
+            ${DEBUG_SYMBOLS_PATH}/${ANDROID_ABI}/${PROJECT_NAME}
+            COMMAND ${CMAKE_STRIP} --strip-all $<TARGET_FILE:${PROJECT_NAME}>)
+
+    target_link_libraries(${PROJECT_NAME} PRIVATE dex_builder_static)
+    target_link_libraries(${PROJECT_NAME} PUBLIC log)
+endif()
+
 add_library(${PROJECT_NAME}_static STATIC ${SOURCES})
-
-target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_include_directories(${PROJECT_NAME}_static PUBLIC include)
-
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(${PROJECT_NAME}_static PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-
-set(CFLAGS
-        -flto
-        )
-
-target_compile_options(${PROJECT_NAME} PRIVATE ${CFLAGS})
-target_link_options(${PROJECT_NAME} PRIVATE -flto)
 
 if (NOT DEFINED DEBUG_SYMBOLS_PATH)
     set(DEBUG_SYMBOLS_PATH ${CMAKE_BINARY_DIR}/symbols)
 endif()
 
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E make_directory ${DEBUG_SYMBOLS_PATH}/${ANDROID_ABI}
-        COMMAND ${CMAKE_OBJCOPY} --only-keep-debug $<TARGET_FILE:${PROJECT_NAME}>
-        ${DEBUG_SYMBOLS_PATH}/${ANDROID_ABI}/${PROJECT_NAME}
-        COMMAND ${CMAKE_STRIP} --strip-all $<TARGET_FILE:${PROJECT_NAME}>)
-
-target_link_libraries(${PROJECT_NAME} PRIVATE dex_builder_static)
-target_link_libraries(${PROJECT_NAME} PUBLIC log)
 target_link_libraries(${PROJECT_NAME}_static PRIVATE dex_builder_static)
 target_link_libraries(${PROJECT_NAME}_static PUBLIC log)
