--- a/external/lsplant/.github/workflows/maven.yml
+++ b/external/lsplant/.github/workflows/maven.yml
@@ -9,13 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: 'recursive'
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: '11'
+          cache: 'gradle'
       - name: Build with Gradle
         run: ./gradlew :lsplant:publish
         env:
