--- a/external/lsplant/.github/workflows/build.yml
+++ b/external/lsplant/.github/workflows/build.yml
@@ -140,6 +140,9 @@ jobs:
           - api-level: 33
             target: google_apis
             arch: x86_64
+          - api-level: 33
+            target: android-tv
+            arch: x86
     steps:
       - name: checkout
         uses: actions/checkout@v3
