--- a/external/lsplant/gradle.properties
+++ b/external/lsplant/gradle.properties
@@ -2,3 +2,5 @@ android.nonTransitiveRClass=true
 android.useAndroidX=true
 android.experimental.testOptions.managedDevices.allowOldApiLevelDevices=true
 android.library.defaults.buildfeatures.androidresources=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
