--- a/external/lsplant/.github/workflows/build.yml
+++ b/external/lsplant/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           ccache -p
           echo 'android.native.buildOutput=verbose' >> gradle.properties
           ./gradlew :lsplant:publishToMavenLocal :lsplant:prefabDebugPackage
+          ./gradlew --stop
         env:
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.maven_pgp_signingKey }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.maven_pgp_signingPassword }}
@@ -134,9 +135,12 @@ jobs:
           - api-level: 33
             target: android-tv
             arch: x86
-          - api-level: UpsideDownCake-ext5
+          - api-level: 34
             target: google_apis
             arch: x86_64
+          - api-level: 34
+            target: android-tv
+            arch: x86
     steps:
       - name: checkout
         uses: actions/checkout@v3
